--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,29 @@
   text-align: center;
 }
 
+.container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+h3 {
+  text-align: center;
+}
+
+.wrapper {
+  width: 540px;
+}
+
+.ing-wrap {
+  margin: 5px 10px 10px 20px;
+}
+
+.wrapper {
+  border: 3px solid grey;
+}
+
+img {
+  width: 100px;
+  height: 100px;
+}
 
